Added main maintenance infrastructure, yet to test
